--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,12 @@ numpy>=1.26.4
 scikit-learn>=1.5.1
 joblib>=1.4.2
 scipy>=1.13.1
+# Updated dependencies for torch, pymatgen, and matminer
+streamlit>=1.38.0
+pandas>=2.2.2
+numpy>=1.26.4
+scikit-learn>=1.5.1
+torch>=2.4.0
+pymatgen>=2024.9.10
+matminer>=0.9.2
+joblib>=1.4.2
